@@ -43,6 +43,7 @@ Minor changes
  * Restore dock layout when using Python3
  * Fix undo after loading stylesheet/custom definitions
  * Support unicode example filenames
+ * Clip bezier lines to avoid problems with log axes
 
 Features of package:
  Plotting features:
