@@ -29,6 +29,7 @@ Minor changes
  * Restore dock layout when using Python3
  * Fix undo after loading stylesheet/custom definitions
  * Support unicode example filenames
+ * Clip bezier lines to avoid problems with log axes
 
 Changes in 1.22:
  * Add option to ignore white space following delimiters when importing CSVs
